# xambit

./: AUTHORS  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h  config.status  configure  configure.ac  configure.lineno  libtool
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
examples/: 3dom.cg
examples/ais/: ais_rec.c  ais_send.c
examples/ais/.deps/: ais_rec.Po  ais_send.Po
examples/dropbox/: dropbox_receiver.c  dropbox_sender.c
examples/dropbox/.deps/: dropbox_receiver.Po  dropbox_sender.Po
examples/include/: ex_types.h
man/: channel_close.3  channel_fifo_open.3  channel_receive.3  channel_register_type.3  channel_send.3  channel_send_file.3  xambit_parcel_hdr_t.3
src/: xambit.c
src/.deps/: xambit.Plo
src/include/: xambit.h
tools/: xambit_xts_init_cg.sh
